# crabby

./: .gitignore  CDN_BUST.txt  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  RELEASE_NOTES.md  build_error.txt  build_errors.txt  build_output.txt  check.txt  check2.txt  check3_utf8.txt  check4_utf8.txt  check_error.txt  check_out.txt  check_out_2.txt  check_out_pro.txt  check_utf8.txt  compile_error.txt  git-installer.ps1  git-installer.sh  hello.js  hello.ts  hello_test.ts  install.ps1  install.sh  lockfile.patch  main.js  package.json  run_trace_utf8.txt  simple.js  simple.ts  test-installer-logic.ps1  test.js  test.ts  test_express.ts  test_features.js  test_features.ts  test_tsx.ts  (+5 more)
.github/workflows/: release.yml
examples/: README.md
examples/basic/: index.ts  package.json
examples/parallel-test/: install_log.txt  package.json
hotfix_test/: package.json  test.ts
init-js-test/src/: index.js
init-ts-test/: audit_out.txt  debug.js  debug.ts  package.json  test_path.ts  tsconfig.json
src/: audit.rs  cache.rs  config.rs  explorer.rs  global.rs  main.rs  manifest.rs  node_runtime.rs  package.rs  package_utils.rs  registry.rs  runner.rs  safety.rs  search.rs  self_upgrade.rs  templates.rs  templates.rs.bak  tsx_utils.rs  ui.rs  update.rs  workspace.rs
template_test_dir/: package.json
test-suite/: package.json  test.ts
test_area/: package.json  package.json.backup.1766842686  run_trace.txt  test.js  tsconfig.json
test_bench/: package.json
testresults/: results.md
tools/: test_runner.ps1  test_runner.sh
ts-autocomplete-test/: package.json
(+8 files in other folders)
