[package]
name = "crabby"
version = "0.1.0"
edition = "2021"
description = "A blazingly fast package manager for the modern web."
repository = "https://github.com/yourusername/crabby"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.15"
indicatif = "0.17"
colored = "2.0"
anyhow = "1.0"
humantime = "2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
flate2 = "1.0"
tar = "0.4"
semver = "1.0"
zip = "0.6"
