[package]
name = "crabby"
version = "0.1.0"
edition = "2021"
description = "A blazingly fast, standalone package manager for Node.js - No Node.js required!"
repository = "https://github.com/AqwozTheDeveloper/crabby"
license = "MIT"
keywords = ["package-manager", "npm", "nodejs", "cli", "standalone"]
categories = ["command-line-utilities", "development-tools"]
authors = ["AqwozTheDeveloper"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.15"
indicatif = "0.17"
colored = "2.0"
anyhow = "1.0"
humantime = "2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
flate2 = "1.0"
tar = "0.4"
semver = "1.0"
zip = "0.6"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
sha2 = "0.10"
sha1 = "0.10"
futures = "0.3"
notify = "6.1"
which = "6.0"
dirs = "5.0"
urlencoding = "2.1"
